# mkdocs-thumbnails

./: .gitignore  LICENSE  README-DEV.md  README.md  requirements.txt  setup.cfg  setup.py
mkdocs_thumbnail_maker/: plugin.py  thumbnail.py
src/thumbnails/: plugin.py  thumbnail.py
test/: mkdocs.yml  parsing_example.py
test/docs/: index.md
test/docs/section two/: index.md
thumbnail_maker/: plugin.py
thumbnails/: thumbnail.py
