[metadata]
name = mkdocs-thumbnails
version = 0.0.8
author = Norman Lorrain
author_email = normanlorrain@gmail.com
description = An MkDocs plugin.  Generates thumbnails of PDF files and YouTube links.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/normanlorrain/mkdocs-thumbnails
project_urls =
    Bug Tracker = https://github.com/normanlorrain/mkdocs-thumbnails/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    pymupdf >=1.18
    mkdocs >=1.0
    Pillow >=8.0
    beautifulsoup4
            
[options.packages.find]
where = src

[options.entry_points]
mkdocs.plugins =
    thumbnails = thumbnails.plugin:ThumbnailMaker
        